@@ -2185,13 +2185,6 @@ name|i
 operator|++
 control|)
 block|{
-specifier|final
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|shardUrls
-decl_stmt|;
 if|if
 condition|(
 name|rb
@@ -2204,8 +2197,13 @@ operator|!=
 literal|null
 condition|)
 block|{
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
 name|shardUrls
-operator|=
+init|=
 name|StrUtils
 operator|.
 name|splitSmart
@@ -2221,10 +2219,23 @@ literal|"|"
 argument_list|,
 literal|true
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|replicaListTransformer
 operator|.
 name|transform
+argument_list|(
+name|shardUrls
+argument_list|)
+expr_stmt|;
+comment|// And now recreate the | delimited list of equivalent servers
+name|rb
+operator|.
+name|shards
+index|[
+name|i
+index|]
+operator|=
+name|createSliceShardsStr
 argument_list|(
 name|shardUrls
 argument_list|)
@@ -2482,54 +2493,33 @@ argument_list|,
 name|isShardLeader
 argument_list|)
 decl_stmt|;
-name|replicaListTransformer
-operator|.
-name|transform
-argument_list|(
-name|eligibleSliceReplicas
-argument_list|)
-expr_stmt|;
-name|shardUrls
-operator|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-name|eligibleSliceReplicas
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|Replica
-name|replica
-range|:
-name|eligibleSliceReplicas
-control|)
-block|{
+specifier|final
+name|List
+argument_list|<
 name|String
-name|url
+argument_list|>
+name|shardUrls
 init|=
-name|ZkCoreNodeProps
-operator|.
-name|getCoreUrl
+name|transformReplicasToShardUrls
 argument_list|(
-name|replica
+name|replicaListTransformer
+argument_list|,
+name|eligibleSliceReplicas
 argument_list|)
 decl_stmt|;
-name|shardUrls
-operator|.
-name|add
+comment|// And now recreate the | delimited list of equivalent servers
+specifier|final
+name|String
+name|sliceShardsStr
+init|=
+name|createSliceShardsStr
 argument_list|(
-name|url
+name|shardUrls
 argument_list|)
-expr_stmt|;
-block|}
+decl_stmt|;
 if|if
 condition|(
-name|shardUrls
+name|sliceShardsStr
 operator|.
 name|isEmpty
 argument_list|()
@@ -2583,8 +2573,6 @@ argument_list|)
 throw|;
 block|}
 block|}
-block|}
-comment|// And now recreate the | delimited list of equivalent servers
 name|rb
 operator|.
 name|shards
@@ -2592,11 +2580,9 @@ index|[
 name|i
 index|]
 operator|=
-name|createSliceShardsStr
-argument_list|(
-name|shardUrls
-argument_list|)
+name|sliceShardsStr
 expr_stmt|;
+block|}
 block|}
 block|}
 name|String
@@ -2809,6 +2795,81 @@ expr_stmt|;
 block|}
 return|return
 name|eligibleSliceReplicas
+return|;
+block|}
+DECL|method|transformReplicasToShardUrls
+specifier|private
+specifier|static
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|transformReplicasToShardUrls
+parameter_list|(
+specifier|final
+name|ReplicaListTransformer
+name|replicaListTransformer
+parameter_list|,
+specifier|final
+name|List
+argument_list|<
+name|Replica
+argument_list|>
+name|eligibleSliceReplicas
+parameter_list|)
+block|{
+name|replicaListTransformer
+operator|.
+name|transform
+argument_list|(
+name|eligibleSliceReplicas
+argument_list|)
+expr_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|shardUrls
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|eligibleSliceReplicas
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Replica
+name|replica
+range|:
+name|eligibleSliceReplicas
+control|)
+block|{
+name|String
+name|url
+init|=
+name|ZkCoreNodeProps
+operator|.
+name|getCoreUrl
+argument_list|(
+name|replica
+argument_list|)
+decl_stmt|;
+name|shardUrls
+operator|.
+name|add
+argument_list|(
+name|url
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|shardUrls
 return|;
 block|}
 DECL|method|createSliceShardsStr
